--- a/CRUDZASO-HabitFlow/pages/auth.html
+++ b/CRUDZASO-HabitFlow/pages/auth.html
@@ -10,12 +10,13 @@
     <section>
 
             <div class="box">
-                    <input type="email" name="" id="emma">
+                    <input type="email" name="" id="email">
                     <input type="password" name="" id="pass">
-                    <button type="submit">Iniciar Sesion</button>
+                    <button type="submit" id="button">Iniciar Sesion</button>
             </div>
      
     </section>
-    
+
+    <script src="../scr/auth.js"></script>
 </body>
 </html>
