--- a/CRUDZASO-HabitFlow/pages/habits.html
+++ b/CRUDZASO-HabitFlow/pages/habits.html
@@ -85,7 +85,9 @@
                 <div class="column-header pending-header">
                     <h3> Pendiente</h3>
                 </div>
-                <div class="column-content" id="pendingColumn"></div>
+                <div class="column-content" id="pendingColumn">
+                    <img src=".." alt="">
+                </div>
             </div>
 
             <div class="column">
@@ -104,6 +106,6 @@
         </div>
     </div>
 
-    <script type="module" src="../scr/"></script>
+    <script src="../scr/habits.js"></script>
 </body>
 </html>
